almost added stuff, fixed spacing, did a change

--- a/front/resources/public/css/custom.css
+++ b/front/resources/public/css/custom.css
@@ -39,4 +39,7 @@
 	border-spacing: 1em 0;
 }
 
+.inp {
+	width: 95%;
+}
 ;; TODO fix the weird spacing stuff
